# maticgasstation

./: .gitignore  Dockerfile  Makefile  README.md  config.json  maticGasStation.py  pyproject.toml  requirements.txt
maticgasstation/: __init__.py  gasStation.py
mgs/: .env.example  __init__.py  blockSize.js  blocktime.js  egs_ref.py  export.py  gasPrice.js  gasPriceList.js  getConfig.py  getWeb3.py  index.js  main.js  main.py  package-lock.json  package.json  recommendation.js  recommendation_v2.js  serve.js  settings.py  transaction.js  transactions.js  tx.js  util.py  v1recommendation.js  v2recommendation.js
mgs/api/: serve.js
mgs/api/v1/: v1.js
mgs/api/v2/: v2.js
mgs/config/: config.js
mgs/helpers/: redis.js  web3.js
mgs/model/: avgBlockTime.py  block.py  blockTracker.py  timers.py  transaction.py
mgs/modelparams/: constants.py
mgs/models/: recommendation.js  tx.js  v2recommendation.js
mgs/v1/: transactions.js  v1.js
mgs/v2/: gasPrice.js  gasPriceList.js  v2.js
serve/: index.js  package-lock.json  package.json
